# Paper-Briefer

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: validation-test.md
docs/design-decisions/: 001-positioning.md  002-extraction-priorities.md  003-compression-validation.md
examples/: README.md  ocr-playground-download-20260510t130752z-brief.md  ocr-playground-download-20260510t130752z-metadata.json
paper_briefer/: __init__.py  brief.py  cli.py  extract.py
tests/: test_brief.py  test_extract.py
